# medcode

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_scores.py  validate-submission.sh
openenv_my_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  __init__.py  app.py  my_env_environment.py  requirements.txt
tasks/: easy.json  hard.json  medium.json
